--- a/less/style.less
+++ b/less/style.less
@@ -1,5 +1,3 @@
-@bar_bg: white;
-@bar_fg: #888;
 @body_padding: 16px;
 @mobile_width: 600px;
 
@@ -16,12 +14,6 @@
     "Droid Sans",
     "Helvetica Neue",
     sans-serif;
-}
-
-.nice_text_shadow() {
-  text-shadow:
-    0 1px 0 fade(black, 40%),
-    0 0 8px fade(black, 40%);
 }
 
 * {
@@ -41,7 +33,7 @@ body {
 
 html {
   .sans_serif;
-  background: @bar_bg;
+  background: #fff;
   color: #555;
 }
 
@@ -61,9 +53,8 @@ footer {
 
 footer {
   padding: @body_padding;
-  padding-top: @body_padding;
-  margin-top: 20px;
-  color: @bar_fg;
+  margin-top: 0;
+  color: #666;
   font-size: 0.9rem;
   display: block;
 
@@ -99,6 +90,11 @@ h1 {
   margin-top: 0;
   margin-bottom: @circle_size;
 
+  a {
+    text-decoration: none;
+    color: inherit;
+  }
+
   // The little Pokéball button
   &:after {
     content: " ";
@@ -132,7 +128,6 @@ h3 {
 }
 
 .badge {
-  .nice_text_shadow;
   font-weight: bold;
   font-size: 1rem;
   font-family: inherit;
